# youtube-auto-post

./: .gitignore  CMakeLists.txt  auth.py  drive_to_youtube.py  generate_video.py  requirements.txt  upload.py
.github/workflows/: daily_post.yml  daily_upload.yml
src/: test_gemini.cpp  youtube_uploader.cpp  youtube_uploader.hpp
